--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                 <br>
                 <div>
                     <i class="fa fa-home"></i>
-                    <a href="#location">
+                    <a href="contact.html#location">
                         <span>
                             <h5>
                                 WSOA Digital Arts Division, Station Street
