--- a/about.html
+++ b/about.html
@@ -77,210 +77,172 @@
                 </p>
 
                 <a href="courses.html#courses" class="main-btn other-btn">What We Offer</a>
-
             </div>
+
             <div class="about-colm">
                 <img src="Images/uriel-soberanes-MxVkWPiJALs-unsplash.jpg"
                     alt="A man with a VR headset on loooks up in awe. He is a skinny white boy with a longsleeve top on. The top has a large overfilled burger with eyes on it.">
             </div>
+
         </div>
     </section>
 
-    <section class="people">
-        <h1>
-            Our People
-        </h1>
-        <row>
-            <ul class="our-staff">
-                <li>
-                    <p>
-                        <strong>
-                            Mr Stephen Cloete
-                        </strong>
-                        <br>
-                        <strong>
-                            Position:
-                        </strong>
-                        Lecturer
-                        <br>
-                        <strong>
-                            Email:
-                        </strong>
-                        <a href="mailto:stephen.cloete1@wits.ac.za">
-                            stephen.cloete1@wits.ac.za
-                        </a>
-                        <br>
+    <section class="staff">
+        <div class="row">
+            <div class="about-staff">
+                <h1>
+                    Our People
+                </h1>
+                <p>
+                    <strong class="name1">
+                        Mr Stephen Cloete
+                    </strong>
+                    <br>
+                    <strong>
+                        Position:
+                    </strong>
+                    Lecturer
+                    <br>
+                    <strong>
+                        Email:
+                    </strong>
+                    <a href="mailto:stephen.cloete1@wits.ac.za">
+                        stephen.cloete1@wits.ac.za
+                    </a>
+                </p>
+                <p>
+                    <strong class="name1">
+                        Mr Angus Davidson
+                    </strong>
+                    <br>
+                    <strong>
+                        Position:
+                    </strong>
+                    ICT Project Leader: Digital Arts
+                    <br>
+                    <strong>
+                        Email:
+                    </strong>
+                    <a href="mailto:Angus.Davidson@wits.ac.za">
+                        Angus.Davidson@wits.ac.za
 
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        <strong>
-                            Mr Angus Davidson
-                        </strong>
-                        <br>
-                        <strong>
-                            Position:
-                        </strong>
-                        ICT Project Leader: Digital Arts
-                        <br>
-                        <strong>
-                            Email:
-                        </strong>
-                        <a href="mailto:Angus.Davidson@wits.ac.za">
-                            Angus.Davidson@wits.ac.za
+                    </a>
+                </p>
+                <p>
+                    <strong class="name1">
+                        Mr Timothy Flusk
+                    </strong>
+                    <br>
+                    <strong>
+                        Position:
+                    </strong>
+                    Associate Lecturer
+                    <br>
+                    <strong>
+                        Email:
+                    </strong>
+                    <a href="mailto:Timothy.Flusk@wits.ac.za">
+                        Timothy.Flusk@wits.ac.za
+                    </a>
 
-                        </a>
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        <strong>
-                            Mr Timothy Flusk
-                        </strong>
-                        <br>
-                        <strong>
-                            Position:
-                        </strong>
-                        Associate Lecturer
-                        <br>
-                        <strong>
-                            Email:
-                        </strong>
-                        <a href="mailto:Timothy.Flusk@wits.ac.za">
-                            Timothy.Flusk@wits.ac.za
-                        </a>
-                        <br>
+                </p>
+                <p>
+                    <strong class="name1">
+                        Mrs Hanli Geyser
+                    </strong>
+                    <br>
+                    <strong>
+                        Position:
+                    </strong>
+                    Lecturer
+                    <br>
+                    <strong>
+                        Email:
+                    </strong>
+                    <a href="mailto:Hanli.Geyser@wits.ac.za">
+                        Hanli.Geyser@wits.ac.za
+                    </a>
+                    <br>
+                    <strong>
+                        Research Interests:
+                    </strong>
+                    Decolonising Programming Education,
+                    Critical Code Studies,
+                    Interactive Narrative, Game Studies
 
-                    </p>
+                </p>
+                <p>
+                    <strong>
+                        Ms Henrike Lode
+                    </strong>
 
+                    <br>
+                    <strong>
+                        Position:
+                    </strong>
+                    Lecturer
+                    <br>
+                    <strong>
+                        Email:
+                    </strong>
+                    <a href="mailto:henrike.lode@wits.ac.za">
+                        henrike.lode@wits.ac.za
+                    </a>
+                    <br>
+                    <strong>
+                        Research Interests:
+                    </strong>
+                    Serious Games, Educational Games, Persuasive Games
 
-                </li>
-                <li>
-                    <p>
-                        <strong>
-                            Mrs Hanli Geyser
-                        </strong>
+                </p>
+                <p>
+                    <strong class="name1">
+                        Miss Samantha Schoeman
+                    </strong>
+                    <br>
+                    <strong>
+                        Position:
+                    </strong>
+                    Associate Lecturer
+                    <br>
+                    <strong>Email:
+                    </strong>
+                    <a href="mailto:samantha.schoeman@wits.ac.za">
+                        samantha.schoeman@wits.ac.za
+                    </a>
+                    <br>
+                    <strong>
+                        Research Interests:
+                    </strong>
+                    Game Development, Animation, Narrative and Interactivity, Visual
+                    Storytelling and Communication
 
-                        <br>
-                        <strong>
-                            Position:
-                        </strong>
-                        Lecturer
-                        <br>
-                        <strong>
-                            Email:
-                        </strong>
-                        <a href="mailto:Hanli.Geyser@wits.ac.za">
-                            Hanli.Geyser@wits.ac.za
-                        </a>
-                        <br>
-                        <strong>
-                            Research Interests:
-                        </strong>
-                        <span>
-                            Decolonising Programming Education,
-                            Critical Code Studies,
-                            Interactive Narrative, Game Studies
-                        </span>
-                        <br>
-                    </p>
-
-
-                </li>
-                <li>
-                    <p>
-                        <strong>
-                            Ms Henrike Lode
-                        </strong>
-
-                        <br>
-                        <strong>
-                            Position:
-                        </strong>
-                        Lecturer
-                        <br>
-                        <strong>
-                            Email:
-                        </strong>
-                        <a href="mailto:henrike.lode@wits.ac.za">
-                            henrike.lode@wits.ac.za
-                        </a>
-                        <br>
-                        <strong>
-                            Research Interests:
-                        </strong>
-                        <span>
-                            Serious Games, Educational Games, Persuasive Games
-                        </span>
-                        <br>
-                    </p>
-
-
-                </li>
-                <li>
-
-
-                    <p>
-                        <strong>
-                            Miss Samantha Schoeman
-                        </strong>
-
-                        <br>
-                        <strong>
-                            Position:
-                        </strong>
-                        Associate Lecturer
-                        <br>
-                        <strong>Email:
-                        </strong>
-                        <a href="mailto:samantha.schoeman@wits.ac.za">
-                            samantha.schoeman@wits.ac.za
-                        </a>
-                        <br>
-                        <strong>
-                            Research Interests:
-                        </strong>
-                        <span>
-                            Game Development, Animation, Narrative and Interactivity, Visual
-                            Storytelling and Communication
-                        </span>
-                        <br>
-                    </p>
-
-
-                </li>
-                <li>
-
-                    <p>
-                        <strong>
-                            Mr Raymond Whitcher
-                        </strong>
-                        <br>
-                        <strong>
-                            Position:
-                        </strong>
-                        Lecturer
-                        <br>
-                        <strong>
-                            Email:
-                        </strong>
-                        <a href="mailto:raymond.whitcher@wits.ac.za">
-                            raymond.whitcher@wits.ac.za</a>
-                        <br>
-                        <strong>Research Interests:
-
-                        </strong>
-                        <span>
-                            Comics, Animation, Intermediality, Adaptation
-                        </span>
-                        <br>
-                    </p>
-
-
-                </li>
-            </ul>
-        </row>
+                </p>
+                <p>
+                    <strong class="name1">
+                        Mr Raymond Whitcher
+                    </strong>
+                    <br>
+                    <strong>
+                        Position:
+                    </strong>
+                    Lecturer
+                    <br>
+                    <strong>
+                        Email:
+                    </strong>
+                    <a href="mailto:raymond.whitcher@wits.ac.za">
+                        raymond.whitcher@wits.ac.za</a>
+                    <br>
+                    <strong>Research Interests:
+                    </strong>
+                    Comics, Animation, Intermediality, Adaptation
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <img src="Images/staff.jpg" class="pic">
+        </div>
     </section>
 
     <!--Footer-->
