--- a/courses.html
+++ b/courses.html
@@ -63,7 +63,7 @@
 
             <div class="courses-colm">
                 <a href="courses.html#ba-degree">
-                    <img src="Images/priscilla-du-preez-XkKCui44iM0-unsplash - Copy.jpg" />
+                    <img src="Images/students1.jpg" />
                     <div class="layer">
                         <h3>
                             BA Digital Arts
@@ -75,7 +75,7 @@
 
             <div class="courses-colm">
                 <a href="courses.html#beng-degree">
-                    <img src="Images/linkedin-sales-solutions-EI50ZDA-l8Y-unsplash - Copy.jpg">
+                    <img src="Images/students.jpg">
                     <div class="layer">
                         <h3>
                             BEngSc Digital Arts
@@ -88,7 +88,7 @@
 
             <div class="courses-colm">
                 <a href="courses.html#post-degree">
-                    <img src="Images/lagos-techie-IgUR1iX0mqM-unsplash - Copy.jpg">
+                    <img src="Images/students2.jpg">
                     <div class="layer">
                         <h3>
                             Post-Graduate
