--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <div class="courses-colm">
                 <a href="courses.html#ba-degree">
-                    <img src="Images/priscilla-du-preez-XkKCui44iM0-unsplash.jpg">
+                    <img src="Images/COVER1.jpg">
                     <div class="layer">
                         <h3>
                             BA Digital Arts
@@ -104,7 +104,7 @@
 
             <div class="courses-colm">
                 <a href="courses.html#beng-degree">
-                    <img src="Images/linkedin-sales-solutions-EI50ZDA-l8Y-unsplash.jpg">
+                    <img src="Images/COVER2.jpg">
                     <div class="layer">
                         <h3>
                             BEngSc Digital Arts
@@ -125,7 +125,7 @@
 
             <div class="courses-colm">
                 <a href="courses.html#post-degree">
-                    <img src="Images/lagos-techie-IgUR1iX0mqM-unsplash.jpg">
+                    <img src="Images/COVER3.jpg">
                     <div class="layer">
                         <h3>
                             Post-Graduate
@@ -212,6 +212,7 @@
             <i class="fa fa-twitter"><a href="https://twitter.com/WitsDigitalArt"></a></i>
             <i class="fa fa-instagram"><a href="https://instagram.com/witsdigitalarts?utm_medium=copy_link"></a></i>
             <i class="fa fa-gamepad"><a href="https://wits-digital-arts.itch.io/"></a></i>
+            <i class="fa fa-play"><a href="https://www.youtube.com/user/witsdigitalarts"></a></i>
         </div>
     </footer>
 
