--- a/courses.html
+++ b/courses.html
@@ -153,7 +153,8 @@
                 the applicant’s application.
 
             </ul>
-            <br>
+            <center> <img src="Images/break2.jpg" class="pic"></center>
+
             <ul>
                 <b><u>Additional Requirements:</u></b>
                 <li>
@@ -299,7 +300,10 @@
                 you will be able to experiment with growing technologies like VR and AR, and produce large-scale
                 creative projects.
             </p>
-            <br>
+            <center>
+                <img src="Images/break1.jpg" class="pic">
+            </center>
+
             <ul>
                 <b><u>Application Requirements:</u></b>
                 <li>Minimum APS of 42</li>
@@ -449,8 +453,9 @@
                 can
                 choose from Animation (2D OR 3D OR Experimental), Interactive Media, Writing and Interactivity or
                 Advanced Game Design (the latter requires prior experience in Game Design).
-                <br>
-                <br>
+            </p>
+
+            <p>
                 <b><u>Application Requirements:</u></b>
                 <br>
                 Honours: A Bachelor’s Degree within a related field (e.g. Software Development, Graphic Design,
@@ -458,8 +463,9 @@
                 Applicants
                 will be requested to supply a critical writing sample as well as practical portfolio.
             </p>
-            <br>
-            <br>
+            <center>
+                <img src="Images/Untitled.png" class="pic">
+            </center>
             <h4>
                 Masters & PhD
             </h4>
@@ -522,11 +528,11 @@
                 <br>
                 <center>
                     For more information, please contact our Post Graduate Co-Ordinator:
-                    <br>
-                    Stephen Cloete on stephen.cloete1@digitalarts.wits.ac.za
+                    Teagan Bristow on
                     or,
-                    <br>
-                    info.digitalarts@wits.ac.za for Supervision topics and/or capacity.
+                    <a href="mailto:info.digitalarts@wits.ac.za">info.digitalarts@wits.ac.za</a> for Supervision topics
+                    and/or capacity. Please fele free to take a look at <a href="about.html#staff">Our Staff</a> for
+                    more information on their recearch interests.
                 </center>
                 <br>
                 For our colleagues at other
@@ -558,6 +564,7 @@
             <i class="fa fa-twitter"><a href="https://twitter.com/WitsDigitalArt"></a></i>
             <i class="fa fa-instagram"><a href="https://instagram.com/witsdigitalarts?utm_medium=copy_link"></a></i>
             <i class="fa fa-gamepad"><a href="https://wits-digital-arts.itch.io/"></a></i>
+            <i class="fa fa-play"><a href="https://www.youtube.com/user/witsdigitalarts"></a></i>
         </div>
     </footer>
 
