--- a/about.html
+++ b/about.html
@@ -258,6 +258,7 @@
             <i class="fa fa-twitter"><a href="https://twitter.com/WitsDigitalArt"></a></i>
             <i class="fa fa-instagram"><a href="https://instagram.com/witsdigitalarts?utm_medium=copy_link"></a></i>
             <i class="fa fa-gamepad"><a href="https://wits-digital-arts.itch.io/"></a></i>
+            <i class="fa fa-play"><a href="https://www.youtube.com/user/witsdigitalarts"></a></i>
         </div>
     </footer>
 
