--- a/alumni.html
+++ b/alumni.html
@@ -91,30 +91,6 @@
             </div>
         </div>
     </section>
-    <section class="news-video" id="news-video">
-        <center>
-            <h2>
-                Study Game Design at Wits
-            </h2>
-
-            <br>
-            <iframe width="610" height="365" src="https://www.youtube.com/embed/nV1VXCyoZX4"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-            </iframe>
-            <p>
-                This video is a perfect summary of what happens here at Wits Digital Arts!
-                <br>
-                <br>
-                Our students and staff in video explain a bit about what we offer, as well as the opportunities provded
-                by
-                our degrees. If you feel we have missed anything that you would like to know, feel free to contact us!
-            </p>
-            <a href="contact.html" class="main-btn other-btn">Contact Us</a>
-        </center>
-    </section>
-
     <!--Footer-->
     <footer class="footer">
         <h4>
@@ -128,6 +104,7 @@
             <i class="fa fa-twitter"><a href="https://twitter.com/WitsDigitalArt"></a></i>
             <i class="fa fa-instagram"><a href="https://instagram.com/witsdigitalarts?utm_medium=copy_link"></a></i>
             <i class="fa fa-gamepad"><a href="https://wits-digital-arts.itch.io/"></a></i>
+            <i class="fa fa-play"><a href="https://www.youtube.com/user/witsdigitalarts"></a></i>
         </div>
     </footer>
 
