--- a/courses.html
+++ b/courses.html
@@ -531,7 +531,7 @@
                     Teagan Bristow on
                     or,
                     <a href="mailto:info.digitalarts@wits.ac.za">info.digitalarts@wits.ac.za</a> for Supervision topics
-                    and/or capacity. Please fele free to take a look at <a href="about.html#staff">Our Staff</a> for
+                    and/or capacity. Please fe free to take a look at <a href="about.html#staff">Our Staff</a> for
                     more information on their recearch interests.
                 </center>
                 <br>
