--- a/courses.html
+++ b/courses.html
@@ -560,11 +560,12 @@
             Follow us on our Social Media and stay informed about the latest at the Digital Arts Department
         </p>
         <div class="social-icons">
-            <i class="fa fa-facebook"><a href="https://www.facebook.com/Wits.Digital.Arts"></a></i>
-            <i class="fa fa-twitter"><a href="https://twitter.com/WitsDigitalArt"></a></i>
-            <i class="fa fa-instagram"><a href="https://instagram.com/witsdigitalarts?utm_medium=copy_link"></a></i>
-            <i class="fa fa-gamepad"><a href="https://wits-digital-arts.itch.io/"></a></i>
-            <i class="fa fa-play"><a href="https://www.youtube.com/user/witsdigitalarts"></a></i>
+            <a target="_blank" href="https://www.facebook.com/Wits.Digital.Arts"><i class="fa fa-facebook"></i></a>
+            <a target="_blank" href="https://twitter.com/WitsDigitalArt"><i class="fa fa-twitter"></i></a>
+            <a target="_blank" href="https://instagram.com/witsdigitalarts?utm_medium=copy_link"><i
+                    class="fa fa-instagram"></i></a>
+            <a target="_blank" href="https://wits-digital-arts.itch.io/"><i class="fa fa-gamepad"></i></a>
+            <a target="_blank" href="https://www.youtube.com/user/witsdigitalarts"><i class="fa fa-play"></i></a>
         </div>
     </footer>
 
