--- a/alumni.html
+++ b/alumni.html
@@ -51,7 +51,7 @@
     <section class="news-content">
         <div class="row">
             <div class="news-colm">
-                <img src="/Images/digitalhc.jpg">
+                <img src="Images/digitalhc.jpg">
             </div>
             <div class="news-colm">
                 <h1>
